fix: center align items in feature4 component

--- a/editor-components/feature/feature4/feature4.module.scss
+++ b/editor-components/feature/feature4/feature4.module.scss
@@ -83,6 +83,7 @@
           width: 100%;
           height: 100%;
           justify-content: center;
+          align-items: center !important;
           padding: var(--composer-gap-md);
           color: var(--composer-font-color-secondary);
           gap: var(--composer-gap-sm);
